--- a/Makefile.am
+++ b/Makefile.am
@@ -48,57 +48,57 @@ lib_libCppUTest_a_CFLAGS = $(AM_CFLAGS) $(CPPUTEST_CFLAGS) $(CPPUTEST_ADDITIONAL
 lib_libCppUTest_a_CXXFLAGS = $(AM_CXXFLAGS) $(CPPUTEST_CXXFLAGS) $(CPPUTEST_ADDITIONAL_CXXFLAGS)
 
 lib_libCppUTest_a_SOURCES = \
-	src/CppUTest/CommandLineArguments.cpp \
-	src/CppUTest/CommandLineTestRunner.cpp \
-	src/CppUTest/JUnitTestOutput.cpp \
-	src/CppUTest/MemoryLeakDetector.cpp \
-	src/CppUTest/MemoryLeakWarningPlugin.cpp \
-	src/CppUTest/SimpleString.cpp \
-	src/CppUTest/SimpleStringInternalCache.cpp \
-	src/CppUTest/SimpleMutex.cpp \
-	src/CppUTest/TeamCityTestOutput.cpp \
-	src/CppUTest/TestFailure.cpp \
-	src/CppUTest/TestFilter.cpp \
-	src/CppUTest/TestHarness_c.cpp \
-	src/CppUTest/TestMemoryAllocator.cpp \
-	src/CppUTest/TestOutput.cpp \
-	src/CppUTest/TestPlugin.cpp \
-	src/CppUTest/TestRegistry.cpp \
-	src/CppUTest/TestResult.cpp \
-	src/CppUTest/TestTestingFixture.cpp \
-	src/CppUTest/Utest.cpp \
-	src/Platforms/@CPP_PLATFORM@/UtestPlatform.cpp
+	CppUTest/src/CommandLineArguments.cpp \
+	CppUTest/src/CommandLineTestRunner.cpp \
+	CppUTest/src/JUnitTestOutput.cpp \
+	CppUTest/src/MemoryLeakDetector.cpp \
+	CppUTest/src/MemoryLeakWarningPlugin.cpp \
+	CppUTest/src/SimpleString.cpp \
+	CppUTest/src/SimpleStringInternalCache.cpp \
+	CppUTest/src/SimpleMutex.cpp \
+	CppUTest/src/TeamCityTestOutput.cpp \
+	CppUTest/src/TestFailure.cpp \
+	CppUTest/src/TestFilter.cpp \
+	CppUTest/src/TestHarness_c.cpp \
+	CppUTest/src/TestMemoryAllocator.cpp \
+	CppUTest/src/TestOutput.cpp \
+	CppUTest/src/TestPlugin.cpp \
+	CppUTest/src/TestRegistry.cpp \
+	CppUTest/src/TestResult.cpp \
+	CppUTest/src/TestTestingFixture.cpp \
+	CppUTest/src/Utest.cpp \
+	CppUTest/Platforms/@CPP_PLATFORM@/UtestPlatform.cpp
 
-include_cpputestdir = $(includedir)/CppUTest
+include_cpputestdir = $(srcdir)/CppUTest/include
 
 include_cpputest_HEADERS = \
-	include/CppUTest/CommandLineArguments.h \
-	include/CppUTest/CommandLineTestRunner.h \
-	include/CppUTest/CppUTestConfig.h \
-	include/CppUTest/JUnitTestOutput.h \
-	include/CppUTest/MemoryLeakDetector.h \
-	include/CppUTest/MemoryLeakDetectorMallocMacros.h \
-	include/CppUTest/MemoryLeakDetectorNewMacros.h \
-	include/CppUTest/MemoryLeakWarningPlugin.h \
-	include/CppUTest/PlatformSpecificFunctions.h \
-	include/CppUTest/PlatformSpecificFunctions_c.h \
-	include/CppUTest/SimpleString.h \
-	include/CppUTest/SimpleStringInternalCache.h \
-	include/CppUTest/SimpleMutex.h \
-	include/CppUTest/StandardCLibrary.h \
-	include/CppUTest/TeamCityTestOutput.h \
-	include/CppUTest/TestFailure.h \
-	include/CppUTest/TestFilter.h \
-	include/CppUTest/TestHarness.h \
-	include/CppUTest/TestHarness_c.h \
-	include/CppUTest/TestMemoryAllocator.h \
-	include/CppUTest/TestOutput.h \
-	include/CppUTest/TestPlugin.h \
-	include/CppUTest/TestRegistry.h \
-	include/CppUTest/TestResult.h \
-	include/CppUTest/TestTestingFixture.h \
-	include/CppUTest/Utest.h \
-	include/CppUTest/UtestMacros.h \
+	CppUTest/include/CppUTest/CommandLineArguments.h \
+	CppUTest/include/CppUTest/CommandLineTestRunner.h \
+	CppUTest/include/CppUTest/CppUTestConfig.h \
+	CppUTest/include/CppUTest/JUnitTestOutput.h \
+	CppUTest/include/CppUTest/MemoryLeakDetector.h \
+	CppUTest/include/CppUTest/MemoryLeakDetectorMallocMacros.h \
+	CppUTest/include/CppUTest/MemoryLeakDetectorNewMacros.h \
+	CppUTest/include/CppUTest/MemoryLeakWarningPlugin.h \
+	CppUTest/include/CppUTest/PlatformSpecificFunctions.h \
+	CppUTest/include/CppUTest/PlatformSpecificFunctions_c.h \
+	CppUTest/include/CppUTest/SimpleString.h \
+	CppUTest/include/CppUTest/SimpleStringInternalCache.h \
+	CppUTest/include/CppUTest/SimpleMutex.h \
+	CppUTest/include/CppUTest/StandardCLibrary.h \
+	CppUTest/include/CppUTest/TeamCityTestOutput.h \
+	CppUTest/include/CppUTest/TestFailure.h \
+	CppUTest/include/CppUTest/TestFilter.h \
+	CppUTest/include/CppUTest/TestHarness.h \
+	CppUTest/include/CppUTest/TestHarness_c.h \
+	CppUTest/include/CppUTest/TestMemoryAllocator.h \
+	CppUTest/include/CppUTest/TestOutput.h \
+	CppUTest/include/CppUTest/TestPlugin.h \
+	CppUTest/include/CppUTest/TestRegistry.h \
+	CppUTest/include/CppUTest/TestResult.h \
+	CppUTest/include/CppUTest/TestTestingFixture.h \
+	CppUTest/include/CppUTest/Utest.h \
+	CppUTest/include/CppUTest/UtestMacros.h \
 	generated/CppUTestGeneratedConfig.h
 
 lib_libCppUTestExt_a_CPPFLAGS = $(lib_libCppUTest_a_CPPFLAGS)
