--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -364,9 +364,9 @@ jobs:
               extensions
           - name: overridden CXXFLAGS and CFLAGS and CPPFLAGS
             make_args: >
-              CLFAGS=""
+              CFLAGS=""
               CXXFLAGS=""
-              CPPFLAGS="-Iinclude"
+              CPPFLAGS="-ICppUTest/include"
           - name: without Standard C library includes
             make_args: >
               CPPUTEST_USE_STD_C_LIB=N
@@ -376,9 +376,9 @@ jobs:
             make_args: TARGET_PLATFORM=real_platform
           - name: overridden CXXFLAGS and CFLAGS and memory leak and STDC++ disabled
             make_args: >
-              CLFAGS=""
+              CFLAGS=""
               CXXFLAGS=""
-              CPPFLAGS="-Iinclude -DCPPUTEST_STD_CPP_LIB_DISABLED -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED"
+              CPPFLAGS="-ICppUTest/include -DCPPUTEST_STD_CPP_LIB_DISABLED -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED"
           - name: Examples
             make_args: examples
           - name: JUnit Output
